--- a/single_page_cv.html
+++ b/single_page_cv.html
@@ -27,12 +27,13 @@
 	<body>
 		<hr></hr>
 		<h1>Hope Decardi-Nelson</h1>
-		<h3>Junior Frontend Developer</h3>
+		<h3>Full Stack Developer</h3>
 		<p>Accra</p>
 		<p>nicardid@gmail.com</p>
 
 		<h3>Skills</h3>
 		<p>HTML, CSS , JavaScript, Accessibility, Figma Design, Responsive Web Design,<br>
+		python, Django, API documentation, Docker, Amazon Web Service <br> 
 		Technical Writing, Presentation
 		</p>
 
