--- a/Basic Html Website/index.html
+++ b/Basic Html Website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <link href="./styles.css" rel="styles/css"/>
+        <link href="./styles.css" rel="stylesheet" type="text/css"/>
         <titlte>Basic Html Website</titlte>
     </head>
     <body>
