chore: inital navbar look

--- a/Basic Html Website/index.html
+++ b/Basic Html Website/index.html
@@ -6,15 +6,17 @@
         <titlte>Basic Html Website</titlte>
     </head>
     <body>
-        <a><span></span>Your name</a>
-        <nav>
-            <a href="">Home</a>
-            <a href="./project.html">Projects</a>
-            <a href="./article.html">Articles</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <div id="navbar">
+            <a><span></span>Your name</a>
+            <nav>
+                <a href="">Home</a>
+                <a href="./project.html">Projects</a>
+                <a href="./article.html">Articles</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </div>
         <main>
-            <section>
+            <section id="main-page">
                 <h1>Frontend Developer</h1>
                 <p>html only with proper layout no styling</p>
             </section>
