--- a/Basic Html Website/index.html
+++ b/Basic Html Website/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="navbar">
             <a><span></span>Your name</a>
-            <nav>
+            <nav id="navbar-items">
                 <a href="">Home</a>
                 <a href="./project.html">Projects</a>
                 <a href="./article.html">Articles</a>
