chore: added footer styles

--- a/Basic Html Website/index.html
+++ b/Basic Html Website/index.html
@@ -20,7 +20,7 @@
                 <h1>Frontend Developer</h1>
                 <p>html only with proper layout no styling</p>
             </section>
-            <section>
+            <section id="supb-pages">
                 <div>
                     <h2>Projects</h2>
                     <ul>
@@ -59,7 +59,7 @@
                     </ul>
                 </div>
             </section>
-            <section>
+            <section id="review-page">
                 <h2>Reviews from my Teachers</h2>
                 <div>
                     <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
