--- a/Basic Html Website/index.html
+++ b/Basic Html Website/index.html
@@ -20,10 +20,10 @@
                 <h1>Frontend Developer</h1>
                 <p>html only with proper layout no styling</p>
             </section>
-            <section id="supb-pages">
-                <div>
+            <section id="sub-pages">
+                <div class="sub_sub_pages projects">
                     <h2>Projects</h2>
-                    <ul>
+                    <ul id="project-list">
                         <li>Only html</li>
                         <li>Calcutor</li>
                         <li>Quiz App</li>
@@ -32,20 +32,20 @@
                     </ul>
                 </div>
                 
-                <div>
+                <div class="sub_sub_pages">
                     <h2>Work Experience</h2>
                     <p>roadmap.sh</p>
                     <p>Solve all frontend projects</p>
                     <a href="#">View Projects</a>
                 </div>
 
-                <div>
+                <div class="sub_sub_pages">
                     <hr>
                     <h2>Open Source work</h2>
                     <p>contrib to 50 open source projects.<br>Made my own project with 10 stars</p>
                     <a href="#">View Profile</a>
                 </div>
-                <div>
+                <div class="sub_sub_pages_last ">
                     <h2>Education</h2>
                     <p>Graduated with CGPA 4.0 out of 5.0.<br>CGPA. Won Acme Hackathon.<br>Organized 30 sessions</p>
                     <p>Courses I took</p>
