chore: add new classes and styles sub_sub_pages

--- a/Basic Html Website/index.html
+++ b/Basic Html Website/index.html
@@ -33,19 +33,21 @@
                 </div>
                 
                 <div class="sub_sub_pages">
-                    <h2>Work Experience</h2>
-                    <p>roadmap.sh</p>
-                    <p>Solve all frontend projects</p>
-                    <a href="#">View Projects</a>
+                    <div class="work-exp">
+                        <h2>Work Experience</h2>
+                        <p>roadmap.sh</p>
+                        <p>Solve all frontend projects</p>
+                        <a href="#">View Projects</a>
+                    </div>
+    
+                    <div class="open-src">
+                        <hr>
+                        <h2>Open Source work</h2>
+                        <p>contrib to 50 open source projects.<br>Made my own project with 10 stars</p>
+                        <a href="#">View Profile</a>
+                    </div>
                 </div>
-
-                <div class="sub_sub_pages">
-                    <hr>
-                    <h2>Open Source work</h2>
-                    <p>contrib to 50 open source projects.<br>Made my own project with 10 stars</p>
-                    <a href="#">View Profile</a>
-                </div>
-                <div class="sub_sub_pages_last ">
+                <div class="sub_sub_pages_last education">
                     <h2>Education</h2>
                     <p>Graduated with CGPA 4.0 out of 5.0.<br>CGPA. Won Acme Hackathon.<br>Organized 30 sessions</p>
                     <p>Courses I took</p>
