chore: updated styles fo sub_sub_page 3

--- a/Basic Html Website/index.html
+++ b/Basic Html Website/index.html
@@ -47,7 +47,7 @@
                         <a href="#">View Profile</a>
                     </div>
                 </div>
-                <div class="sub_sub_pages_last education">
+                <div class="sub_sub_pages education">
                     <h2>Education</h2>
                     <p>Graduated with CGPA 4.0 out of 5.0.<br>CGPA. Won Acme Hackathon.<br>Organized 30 sessions</p>
                     <p>Courses I took</p>
