chore: added ref id and classes for index

--- a/Basic Html Website/index.html
+++ b/Basic Html Website/index.html
@@ -63,20 +63,22 @@
             </section>
             <section id="review-page">
                 <h2>Reviews from my Teachers</h2>
-                <div>
-                    <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
-                    <p>Jane Doe</p>
-                    <p>Assistant Professor</p>
-                </div>
-                <div>
-                    <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
-                    <p>Jane Doe</p>
-                    <p>Assistant Professor</p>
-                </div>
-                <div>
-                    <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
-                    <p>Jane Doe</p>
-                    <p>Assistant Professor</p>
+                <div id="reviews-list">
+                    <div class="review-card">
+                        <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
+                        <p>Jane Doe</p>
+                        <p>Assistant Professor</p>
+                    </div>
+                    <div class="review-card">
+                        <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
+                        <p>Jane Doe</p>
+                        <p>Assistant Professor</p>
+                    </div>
+                    <div class="review-card">
+                        <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
+                        <p>Jane Doe</p>
+                        <p>Assistant Professor</p>
+                    </div>
                 </div>
             </section>
         </main>
