chore: modified contact article and project page

--- a/Basic Html Website/project.html
+++ b/Basic Html Website/project.html
@@ -2,22 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <titlte>Basic Html Website</titlte>
+        <title>Basic Html Website</title>
+        <link href="./styles.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a><span></span>Your name</a>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="">Projects</a>
-            <a href="./article.html">Articles</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <div id="navbar">
+            <a><span></span>Your name</a>
+            <nav id="navbar-items">
+                <a href="./index.html">Home</a>
+                <a href="">Projects</a>
+                <a href="./article.html">Articles</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </div>
         <main>
-            <section>
+            <section id="main-page">
                 <h1>My Projects</h1>
                 <p>html only with proper layout no styling</p>
             </section>
-            <section>
+            <section id="sub-pages">
                 <div>
                     <h2>Only html Portfolio</h2>
                     <p>About:</p>
