--- a/Basic Html Website/article.html
+++ b/Basic Html Website/article.html
@@ -2,18 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <titlte>Basic Html Website</titlte>
+        <title>Basic Html Website</title>
+        <link href="./styles.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a><span></span>Your name</a>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="./project.html">Projects</a>
-            <a href="">Articles</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <div id="navbar">
+            <a><span></span>Your name</a>
+            <nav>
+                <a href="./index.html">Home</a>
+                <a href="./project.html">Projects</a>
+                <a href="">Articles</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </div>
         <main>
-            <section>
+            <section id="sub-pages">
                 <h1>My Articles</h1>
                 <p>html only with proper layout no styling</p>
             </section>
