--- a/Basic Html Website/contact.html
+++ b/Basic Html Website/contact.html
@@ -2,22 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <titlte>Basic Html Website</titlte>
+        <title>Basic Html Website</title>
+        <link href="./styles.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a><span></span>Your name</a>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="./project.html">Projects</a>
-            <a href="./article.html">Articles</a>
-            <a href="">Contact</a>
-        </nav>
+        <div id="navbar">
+            <a><span></span>Your name</a>
+            <nav>
+                <a href="./index.html">Home</a>
+                <a href="./project.html">Projects</a>
+                <a href="./article.html">Articles</a>
+                <a href="">Contact</a>
+            </nav>
+        </div>
         <main>
-            <section>
-                <h1>Frontend Developer</h1>
+            <section id="main-page">
+                <h1>Contact US</h1>
                 <p>html only with proper layout no styling</p>
             </section>
-            <section>
+            <section id="sub-pages">
                 <form>
                     <div>
                         <label>First name</label>
