chore: reapplied styles to project contact and article pages

--- a/Basic Html Website/article.html
+++ b/Basic Html Website/article.html
@@ -8,7 +8,7 @@
     <body>
         <div id="navbar">
             <a><span></span>Your name</a>
-            <nav>
+            <nav id="navbar-items">
                 <a href="./index.html">Home</a>
                 <a href="./project.html">Projects</a>
                 <a href="">Articles</a>
@@ -16,26 +16,28 @@
             </nav>
         </div>
         <main>
-            <section id="sub-pages">
+            <section id="main-pages">
                 <h1>My Articles</h1>
                 <p>html only with proper layout no styling</p>
             </section>
-            <section>
+            <section id="review-page">
                 <h2>Reviews from my Teachers</h2>
-                <div>
-                    <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
-                    <p>Jane Doe</p>
-                    <p>Assistant Professor</p>
-                </div>
-                <div>
-                    <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
-                    <p>Jane Doe</p>
-                    <p>Assistant Professor</p>
-                </div>
-                <div>
-                    <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
-                    <p>Jane Doe</p>
-                    <p>Assistant Professor</p>
+                <div id="reviews-list">
+                    <div class="review-card">
+                        <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
+                        <p>Jane Doe</p>
+                        <p>Assistant Professor</p>
+                    </div>
+                    <div class="review-card">
+                        <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
+                        <p>Jane Doe</p>
+                        <p>Assistant Professor</p>
+                    </div>
+                    <div class="review-card">
+                        <p>Jone doe was brilliant student; alwways stood out with his assignments</p>
+                        <p>Jane Doe</p>
+                        <p>Assistant Professor</p>
+                    </div>
                 </div>
             </section>
         </main>
