--- a/Basic Html Website/project.html
+++ b/Basic Html Website/project.html
@@ -21,19 +21,19 @@
                 <p>html only with proper layout no styling</p>
             </section>
             <section id="sub-pages">
-                <div>
+                <div class="sub_sub_pages projects">
                     <h2>Only html Portfolio</h2>
                     <p>About:</p>
                 </div>
-                <div>
+                <div class="sub_sub_pages">
                     <h2>Calcutor</h2>
                     <p>About:</p>
                 </div>
-                <div>
+                <div class="sub_sub_pages">
                     <h2>Quiz App</h2>
                     <p>About:</p>
                 </div>
-                <div>
+                <div class="sub_sub_pages">
                     <h2>Countdown Timer</h2>
                     <p>About:</p>
                 </div>
