--- a/Basic Html Website/contact.html
+++ b/Basic Html Website/contact.html
@@ -8,7 +8,7 @@
     <body>
         <div id="navbar">
             <a><span></span>Your name</a>
-            <nav>
+            <nav id="navbar-items">
                 <a href="./index.html">Home</a>
                 <a href="./project.html">Projects</a>
                 <a href="./article.html">Articles</a>
@@ -20,8 +20,8 @@
                 <h1>Contact US</h1>
                 <p>html only with proper layout no styling</p>
             </section>
-            <section id="sub-pages">
-                <form>
+            <section id="sub-pages form">
+                <form action="" method="post">
                     <div>
                         <label>First name</label>
                         <input type="text" name="full_name" placeholder="Enter your First name"/>
