chore: modified style for article page

--- a/Basic Html Website/article.html
+++ b/Basic Html Website/article.html
@@ -16,7 +16,7 @@
             </nav>
         </div>
         <main>
-            <section id="main-pages">
+            <section id="main-page">
                 <h1>My Articles</h1>
                 <p>html only with proper layout no styling</p>
             </section>
