chore: updated article page

--- a/Basic Html Website/contact.html
+++ b/Basic Html Website/contact.html
@@ -38,6 +38,7 @@
                         <label>Message</label>
                         <textarea type="text" name="message"></textarea>
                     </div>
+                    <button type="submit" name="submit">Submit</button>
                 </form>
             </section>
         </main>
