chore: adde more feat

--- a/Changelog_component/index.html
+++ b/Changelog_component/index.html
@@ -9,35 +9,30 @@
     <main>
         <h2 id="page-title">Changelog</h2>
         <p>Here's everything we have shipped in the past few days</p>
-        <table>
-            <thead>
-                <th>Timeline</th>
-                <th>Symbol</th>
-                <th>Message</th>
-            </thead>
-            <body>
-                <tr>
-                    <td>September 3, 2024</td>
-                    <td>dot</td>
-                    <td> Announcing Projects on Frontend RoadMap</td>
-                </tr>
-                <tr>
-                    <td>September 3, 2024</td>
-                    <td>dot</td>
-                    <td> Announcing Projects on Frontend RoadMap</td>
-                </tr>
-                <tr>
-                    <td>September 3, 2024</td>
-                    <td>dot</td>
-                    <td> Announcing Projects on Frontend RoadMap</td>
-                </tr>
-                <tr>
-                    <td>September 3, 2024</td>
-                    <td>dot</td>
-                    <td> Announcing Projects on Frontend RoadMap</td>
-                </tr>
-            </body>
-        </table>
+        <section id="page-content">
+            <div class="page-log">
+                <div>
+                    <p>September 3, 2024</p>
+                    <p>dot</p>
+                    <p> Announcing Projects on Frontend RoadMap</p>
+                </div>
+                <div>
+                    <p>September 3, 2024</p>
+                    <p>dot</p>
+                    <p> Announcing Projects on Frontend RoadMap</p>
+                </div>
+                <div>
+                    <p>September 3, 2024</p>
+                    <p>dot</p>
+                    <p> Announcing Projects on Frontend RoadMap</p>
+                </div>
+                <div>
+                    <p>September 3, 2024</p>
+                    <p>dot</p>
+                    <p> Announcing Projects on Frontend RoadMap</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
