--- a/Changelog_component/index.html
+++ b/Changelog_component/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChangeLog Component</title>
+    <style>
+        main{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
     <main>
