chore: added border style

--- a/Changelog_component/index.html
+++ b/Changelog_component/index.html
@@ -10,6 +10,13 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            font-family: curse;
+            border: 1px solid black;
+            border-radius: 2%;
+        }
+
+        #page-title{
+            font-size: larger; 
         }
     </style>
 </head>
