chore: added css for page-log class

--- a/Changelog_component/index.html
+++ b/Changelog_component/index.html
@@ -10,13 +10,19 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-family: curse;
+            font-family: cursive;
             border: 1px solid black;
             border-radius: 2%;
         }
 
         #page-title{
             font-size: larger; 
+        }
+
+        #page-log{
+            display: flex;
+            flex-direction: row;
+            border:1px solid black;
         }
     </style>
 </head>
@@ -25,23 +31,23 @@
         <h2 id="page-title">Changelog</h2>
         <p>Here's everything we have shipped in the past few days</p>
         <section id="page-content">
-            <div class="page-log">
-                <div>
+            <div >
+                <div class="page-log">
                     <p>September 3, 2024</p>
                     <p>dot</p>
                     <p> Announcing Projects on Frontend RoadMap</p>
                 </div>
-                <div>
+                <div class="page-log">
                     <p>September 3, 2024</p>
                     <p>dot</p>
                     <p> Announcing Projects on Frontend RoadMap</p>
                 </div>
-                <div>
+                <div class="page-log">
                     <p>September 3, 2024</p>
                     <p>dot</p>
                     <p> Announcing Projects on Frontend RoadMap</p>
                 </div>
-                <div>
+                <div class="page-log">
                     <p>September 3, 2024</p>
                     <p>dot</p>
                     <p> Announcing Projects on Frontend RoadMap</p>
