chore: changed p tag for page log to div

--- a/Changelog_component/index.html
+++ b/Changelog_component/index.html
@@ -33,24 +33,9 @@
         <section id="page-content">
             <div >
                 <div class="page-log">
-                    <p>September 3, 2024</p>
-                    <p>dot</p>
-                    <p> Announcing Projects on Frontend RoadMap</p>
-                </div>
-                <div class="page-log">
-                    <p>September 3, 2024</p>
-                    <p>dot</p>
-                    <p> Announcing Projects on Frontend RoadMap</p>
-                </div>
-                <div class="page-log">
-                    <p>September 3, 2024</p>
-                    <p>dot</p>
-                    <p> Announcing Projects on Frontend RoadMap</p>
-                </div>
-                <div class="page-log">
-                    <p>September 3, 2024</p>
-                    <p>dot</p>
-                    <p> Announcing Projects on Frontend RoadMap</p>
+                    <div>September 3, 2024</div>
+                    <div>dot</div>
+                    <div> Announcing Projects on Frontend RoadMap</div>
                 </div>
             </div>
         </section>
