chore: changed p tag for page log to div

--- a/Changelog_component/index.html
+++ b/Changelog_component/index.html
@@ -19,10 +19,50 @@
             font-size: larger; 
         }
 
-        #page-log{
+        #page-content{
             display: flex;
             flex-direction: row;
-            border:1px solid black;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+            padding: 0 auto;
+        }
+        #bullet-container{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+        }
+
+        #bullet-line{
+            background-color: #000;
+            width: 2px;
+            height: 100%;
+        }
+
+        #bullet{
+            background-color: #000;
+            width: 15px;
+            height: 15px;
+            border: 1px solid black;
+            border-radius: 50%;
+            position: absolute;
+
+        }
+        #log-message{
+            color:#000;
+            flex: 1;
+            display: flex;
+            padding-left: 20px;
+        }
+        #date{
+            color:lightslategray;
+            flex:1;
+            padding-right: 40px;
+            text-align: right;
         }
     </style>
 </head>
@@ -31,14 +71,19 @@
         <h2 id="page-title">Changelog</h2>
         <p>Here's everything we have shipped in the past few days</p>
         <section id="page-content">
-            <div >
-                <div class="page-log">
-                    <div>September 3, 2024</div>
-                    <div>dot</div>
-                    <div> Announcing Projects on Frontend RoadMap</div>
-                </div>
+            <div id="date">
+                <p>September 3, 2024</p>
+            <div id="bullet-container">
+                <div id="bullet"></div>
+                <div id="bullet-line"></div>
+            </div>
+            <div id="log-message"> 
+                <p>Announcing Projects on Frontend RoadMap</p>
             </div>
         </section>
+        <div>
+            <button class="btn btn-dark">View All Logs</button>
+        </div>
     </main>
     <footer></footer>
 </body>
