chore: updated date section

--- a/Changelog_component/index.html
+++ b/Changelog_component/index.html
@@ -73,6 +73,7 @@
         <section id="page-content">
             <div id="date">
                 <p>September 3, 2024</p>
+            </div>
             <div id="bullet-container">
                 <div id="bullet"></div>
                 <div id="bullet-line"></div>
@@ -81,8 +82,8 @@
                 <p>Announcing Projects on Frontend RoadMap</p>
             </div>
         </section>
-        <div>
-            <button class="btn btn-dark">View All Logs</button>
+        <div class="button-container">
+            <button class="visit-button">Visit Complete Changelog</button>
         </div>
     </main>
     <footer></footer>
