--- a/Changelog_component/index.html
+++ b/Changelog_component/index.html
@@ -18,7 +18,9 @@
         #page-title{
             font-size: larger; 
         }
-
+        #main > p{
+            color: lightslategray;
+        }
         #page-content{
             display: flex;
             flex-direction: row;
@@ -28,6 +30,8 @@
             height: 100%;
             margin: 0 auto;
             padding: 0 auto;
+            padding: 20px;
+            gap:0;
         }
         #bullet-container{
             display: flex;
@@ -63,6 +67,21 @@
             flex:1;
             padding-right: 40px;
             text-align: right;
+        }
+        .button-container{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 5%;
+        }
+
+        .visit-button{
+            border: 1px solid black;
+            background-color: black;
+            color: white;
+            border-radius: 10px;
+            padding: 10px 25px;
         }
     </style>
 </head>
