chore: added more css to profile 1

--- a/testimony/index.html
+++ b/testimony/index.html
@@ -14,7 +14,7 @@
                     <p>I have been soling all the project ideas on roadmap.sh and I am surprised how far I have come from where I started</p>
                     <p>Highly recommended!</p>
                 </div>
-                <div id="profile-img">
+                <div id="profile-1">
                     <img src="./profile_image.jpg" alt="profile image">
                     <div id="profile-username">
                         <p>Artem Jones</p>
