--- a/testimony/index.html
+++ b/testimony/index.html
@@ -15,7 +15,7 @@
                     <p>Highly recommended!</p>
                 </div>
                 <div id="profile-1">
-                    <img src="./profile_image.jpg" alt="profile image">
+                    <img src="./profile_image.jpg" alt="profile image" id="profile-image">
                     <div id="profile-username">
                         <p>Artem Jones</p>
                         <p>Junior Frontend Developer</p>
