chore: 90% complete with the first component

--- a/testimony/index.html
+++ b/testimony/index.html
@@ -16,9 +16,9 @@
                 </div>
                 <div id="profile-1">
                     <img src="./profile_image.jpg" alt="profile image" id="profile-image">
-                    <div id="profile-username">
-                        <p>Artem Jones</p>
-                        <p>Junior Frontend Developer</p>
+                    <div>
+                        <p id="profile-name">Artem Jones</p>
+                        <p id="profile-role">Junior Frontend Developer</p>
                     </div>
                 </div>
             </div>
