chore: 1% complete with component 2

--- a/testimony/index.html
+++ b/testimony/index.html
@@ -22,6 +22,19 @@
                     </div>
                 </div>
             </div>
+            <div id="testimony-1">
+                <div id="message">
+                    <p>I have been soling all the project ideas on roadmap.sh and I am surprised how far I have come from where I started</p>
+                    <p>Highly recommended!</p>
+                </div>
+                <div id="profile-1">
+                    <img src="./profile_image.jpg" alt="profile image" id="profile-image">
+                    <div>
+                        <p id="profile-name">Artem Jones</p>
+                        <p id="profile-role">Junior Frontend Developer</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <section></section>
         <section></section>
