chore: 20% complete 2 component

--- a/testimony/index.html
+++ b/testimony/index.html
@@ -22,8 +22,8 @@
                     </div>
                 </div>
             </div>
-            <div id="testimony-1">
-                <div id="message">
+            <div id="testimony-2">
+                <div id="message-2">
                     <p>I have been soling all the project ideas on roadmap.sh and I am surprised how far I have come from where I started</p>
                     <p>Highly recommended!</p>
                 </div>
