--- a/testimony/index.html
+++ b/testimony/index.html
@@ -24,7 +24,7 @@
             </div>
             <div id="testimony-2">
                 <div id="message-2">
-                    <p>I have been soling all the project ideas on roadmap.sh and I am surprised how far I have come from where I started</p>
+                    <p>Since starting my career in 2021, I have only followed one resource, roadmap.sh, it truly helped me go from 0 to having a job and changing the financial trajectory of my family</p>
                 </div>
                 <div id="profile-1">
                     <img src="./profile_image.jpg" alt="profile image" id="profile-image">
