chore: modified container-1

--- a/testimony/index.html
+++ b/testimony/index.html
@@ -35,7 +35,17 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section>
+            <div id="comp-3-img">
+                <img src="./profile_image.jpg" alt="profile image" srcset="">
+            </div>
+            <div id="comp-3-message">
+                <div id="comp-3-rate"></div>
+                <h3>Jackie Mackle</h3>
+                <p>Engineering Manager</p>
+                <p>I find myself recommending roadmap.sh to all the internees or Junior developers. It's is a very good way to skill up and grow your career.</p>
+            </div>
+        </section>
         <section></section>
     </main>
     <footer>
