chore: added comp-3 css

--- a/testimony/index.html
+++ b/testimony/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="container-2">
             <div id="comp-3-img">
                 <img src="./profile_image.jpg" alt="profile image" srcset="">
             </div>
