--- a/testimony/index.html
+++ b/testimony/index.html
@@ -40,7 +40,9 @@
                 <img src="./profile_image.jpg" alt="profile image" srcset="">
             </div>
             <div id="comp-3-message">
-                <div id="comp-3-rate"></div>
+                <div id="comp-3-rate">
+                    <img src="./star.jfif" alt="star" srcset="">
+                </div>
                 <h3>Jackie Mackle</h3>
                 <p>Engineering Manager</p>
                 <p>I find myself recommending roadmap.sh to all the internees or Junior developers. It's is a very good way to skill up and grow your career.</p>
