chore: added more stars

--- a/testimony/index.html
+++ b/testimony/index.html
@@ -41,7 +41,10 @@
             </div>
             <div id="comp-3-message">
                 <div id="comp-3-rate">
-                    <img src="./star.jfif" alt="star" srcset="">
+                    <img src="./star.jfif" alt="star" srcset="" class="star">
+                    <img src="./star.jfif" alt="star" srcset="" class="star">
+                    <img src="./star.jfif" alt="star" srcset="" class="star">
+                    <img src="./star.jfif" alt="star" srcset="" class="star">
                 </div>
                 <h3>Jackie Mackle</h3>
                 <p>Engineering Manager</p>
