--- a/testimony/index.html
+++ b/testimony/index.html
@@ -47,7 +47,7 @@
                     <img src="./star.jfif" alt="star" srcset="" class="star">
                 </div>
                 <h3>Jackie Mackle</h3>
-                <p>Engineering Manager</p>
+                <p id="profile-role">Engineering Manager</p>
                 <p>I find myself recommending roadmap.sh to all the internees or Junior developers. It's is a very good way to skill up and grow your career.</p>
             </div>
         </section>
