chore: added css for compoent 4

--- a/testimony/index.html
+++ b/testimony/index.html
@@ -51,7 +51,23 @@
                 <p>I find myself recommending roadmap.sh to all the internees or Junior developers. It's is a very good way to skill up and grow your career.</p>
             </div>
         </section>
-        <section></section>
+        <section id="container-3">
+            <div class="comp-4-message">
+                <p>
+                    roadmap.sh is an incredible resource. I was fortunate to have found it in my university days in 2018. It was a single repo with three images. It is amazing to see much it has had on millions of lives since then.
+                </p>
+            </div>
+            <div class="img-carousel">
+                <div class="bullet"><</div>
+                <img src="./profile_image.jpg" alt="profile-image" srcset="" class="img">
+                <img src="./profile_image.jpg" alt="profile-image" srcset="" class="img active">
+                <img src="./profile_image.jpg" alt="profile-image" srcset="" class="img">
+                <div class="bullet">></div>
+            </div>
+            <div>
+                <p>Artem Jones</p>
+            </div>
+        </section>
     </main>
     <footer>
 
