chore: completed component #4

--- a/testimony/index.html
+++ b/testimony/index.html
@@ -58,13 +58,18 @@
                 </p>
             </div>
             <div class="img-carousel">
-                <div class="bullet"><</div>
-                <img src="./profile_image.jpg" alt="profile-image" srcset="" class="img">
+                <div class="bullet" style="font-size: 30px; padding-right: 20px;"><</div>
+                <img src="./profile_image.jpg" alt="profile-image" srcset="" class="img" style="
+                margin-right: 16px;">
                 <img src="./profile_image.jpg" alt="profile-image" srcset="" class="img active">
-                <img src="./profile_image.jpg" alt="profile-image" srcset="" class="img">
-                <div class="bullet">></div>
+                <img src="./profile_image.jpg" alt="profile-image" srcset="" class="img" style="
+                margin-left: 16px;">
+                <div class="bullet" style="
+                font-size: 30px;
+                padding-left: 20px;
+            ">></div>
             </div>
-            <div>
+            <div style="font-size: 25px;font-family: system-ui;">
                 <p>Artem Jones</p>
             </div>
         </section>
