--- a/datepicker_ui/index.html
+++ b/datepicker_ui/index.html
@@ -40,8 +40,14 @@
         padding-bottom: 0px;
         border-bottom: 0px solid #fff;
     }
+    #calendar-btn{
+        width: 40px;
+        border: 0px;
+        border-left: 1px solid;
+        background: #fff;
+    }
 
-    .btn{
+    #btn{
         background: #000;
         height: 20px;
         align-self: center;
