chore: completely fix bugs

--- a/datepicker_ui/index.html
+++ b/datepicker_ui/index.html
@@ -71,6 +71,10 @@
         border: 1px solid lightslategray;
     }
 
+    table > tbody > tr, table > tbody > tr > td {
+        border: 1px solid lightslategrey;
+    }
+
 </style>
 <body>
     <main>
@@ -80,7 +84,7 @@
                     <p>dd/mm/yyyy</p>
                 </div>
                 <button id="calendar-btn">
-                    <img src="./calendar.png" alt="calendar logo" id="calendar-logo" />
+                    <img src="./calendar.png" alt="calendar logo" style="width: 100%;" id="calendar-logo" />
                 </button>
             </div>
             <div class="calendar-day">
