bug: fixed button

--- a/datepicker_ui/index.html
+++ b/datepicker_ui/index.html
@@ -89,9 +89,21 @@
             </div>
             <div class="calendar-day">
                 <div class="calendar-option">
-                    <button id=" btn prev-btn"></button>
+                    <button id="btn prev-btn" style="
+                    background: #000;
+                    height: 20px;
+                    align-self: center;
+                    margin-left: 5px;
+                    margin-right: 5px;
+                "></button>
                     <p>December 2022</p>
-                    <button id="btn forward-btn"></button>
+                    <button id="btn forward-btn" style="
+                    background: #000;
+                    height: 20px;
+                    align-self: center;
+                    margin-left: 5px;
+                    margin-right: 5px;
+                "></button>
                 </div>
                 <table>
                     <thead>
