chore: added css for form-progress-section

--- a/accessible_form_ui/index.html
+++ b/accessible_form_ui/index.html
@@ -33,6 +33,9 @@
                 <div class="form-progress">
                     <p class="form-progress-percentage">65%</p>
                 </div>
+                <div style="font-size: larger; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                    <p class="form-progress-percentage">Profile Completeness</p>
+                </div>
                 <div class="form-checklist">
                     <ul>
                         <li>
