chore: place image in a div

--- a/image_ui/index.html
+++ b/image_ui/index.html
@@ -8,23 +8,33 @@
 </head>
 <body>
     <main class="grid-container">
-        
-        <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        <div class="img-1">
+            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        </div>
+
+        <div class="img-2">
+            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        </div>
 
 
-        <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        <div class="img-3">
+            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        </div>
 
 
-        <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        <div class="img-4">
+            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        </div>
 
 
-        <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        <div class="img-5">
+            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        </div>
 
 
-        <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
-
-
-        <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        <div class="img-6">
+            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+        </div>
         
     </main>
 </body>
