chore: expriement with with divs and text

--- a/image_ui/index.html
+++ b/image_ui/index.html
@@ -9,31 +9,37 @@
 <body>
     <main class="grid-container">
         <div class="img-1">
-            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+            1
+            <!-- <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/> -->
         </div>
 
         <div class="img-2">
-            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+            2
+            <!-- <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/> -->
         </div>
 
 
         <div class="img-3">
-            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+            3
+            <!-- <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/> -->
         </div>
 
 
         <div class="img-4">
-            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+            4
+            <!-- <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/> -->
         </div>
 
 
         <div class="img-5">
-            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+            5
+            <!-- <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/> -->
         </div>
 
 
         <div class="img-6">
-            <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/>
+            6
+            <!-- <img src="./media/bernhard-uTd-kylh7bE-unsplash.jpg"/> -->
         </div>
         
     </main>
